# mini-hedge

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  mypy-baseline.txt  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tach.toml
.github/workflows/: api-contract.yml  ci.yml  deploy.yml
.hypothesis/constants/: 002a080e59232e24  02fcedd7a552f0b1  05914fbe34e1ccb7  0605593f21912638  096923d89b19fe7d  0c2a6b8edefb628d  0cc297a0c111cef2  0f57ec1f8eaca1b8  15f57d345e2ec635  162e7549c2021d9e  18edde72b94fd174  19cd8680c4c34ad4  1b84420f09a885ec  1c2822cdf02e3a56  1d45039d8d1059ed  1e0b290e581b6eaa  1f9bea391d7c8ac8  20cec2493b082ed0  239cd477b23366bf  2d4d89e1800ec022  2db76161aa0bf4c7  2e15ab6828b7cfbb  2fe5403664ccd0a8  329fdf7e9f4239a9  3388c3fb85e4781f  33d16e402dd04d6a  348876dc735ad4d3  35533a1f72cdb9ab  3663809435ff6ea1  379d7a02356890f9  38bf07fe71ab2f20  3a4ab78b1db7cac0  3acc756e09149a49  3c00e6f8d758af3b  3c07c57466a2b92d  3f70a48bdc33b9e6  3f801ff4c8deffec  3fcdd9c8d16dc57e  40501cbe03724856  43ac436e19dbb68f  (+107 more)
alembic/: env.py
app/: config.py  exception_handlers.py  main.py  routes.py  seed.py  seed_trades.py  setup.py
app/adapters/: anthropic_llm.py  factory.py  file_alt_data.py  fmp_alt_data.py  in_process_broker.py  mock_alt_data.py  mock_exchange_broker.py  mock_exchange_corporate_actions.py  mock_exchange_fund_admin.py  mock_exchange_market_data.py  mock_exchange_reference_data.py  mock_kyc_screening.py  mock_llm.py  ollama_llm.py  seed_reference_data.py
app/middleware/: auth.py  idempotency.py  rate_limit.py  timeout.py
app/shared/: __init__.py  adapters.py  alembic_plugins.py  archival.py  archival_service.py  audit_bridge.py  audit_events.py  auth.py  cache.py  cdc_audit_consumer.py  cdc_transformer.py  circuit_breaker.py  database.py  dlq_manager.py  errors.py  events.py  feature_flags.py  fga.py  fga_resources.py  fga_startup.py  fund_context.py  fund_schema.py  idempotency.py  immudb_bridge.py  immudb_client.py  immudb_verifier.py  jwt.py  kafka.py  logging.py  metrics.py  models.py  opensearch_bridge.py  redis.py  redis_bridge.py  repository.py  request_context.py  schema_registry.py  telemetry.py  token_revocation.py  types.py  (+1 more)
client-ui/: .env.local  .env.local.example  Dockerfile.dev  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
client-ui/.next/: BUILD_ID  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
client-ui/src/: middleware.ts
docs/: ARCHITECTURE.md  AUTH.md  DEPLOYMENT.md  OBSERVABILITY.md
infrastructure/alertmanager/: alertmanager.yml
infrastructure/debezium/: minihedge-connector.json  register-connectors.sh
infrastructure/k8s/: README.md
infrastructure/loki/: loki-config.yml
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
infrastructure/traefik/: generate-certs.sh  traefik.yml
infrastructure/vault/: vault-init.sh
keycloak/: investors-realm-export.json  ops-realm-export.json  realm-export.json
load_tests/: locustfile.py  requirements.txt
mock-exchange/: Dockerfile  docker-compose.yml  pyproject.toml
mock-exchange/mock_exchange/: config.py  main.py
mock-exchange/mock_exchange/corporate_actions/: engine.py  models.py  routes.py
mock-exchange/mock_exchange/execution/: brokers.py  engine.py  impact.py  routes.py  trading_hours.py
mock-exchange/mock_exchange/fund_admin/: routes.py  service.py
mock-exchange/mock_exchange/market_data/: ambient_flow.py  fx_forward.py  fx_routes.py  order_book.py  routes.py  service.py  simulator.py  trade_tape.py  volume_profile.py  yield_curve.py
mock-exchange/mock_exchange/reference_data/: instruments.py  routes.py
mock-exchange/mock_exchange/scenarios/: engine.py  routes.py
mock-exchange/mock_exchange/shared/: kafka.py  models.py
mock-exchange/tests/: conftest.py  factories.py
mock-exchange/tests/integration/: test_execution_routes.py  test_market_data_routes.py  test_order_lifecycle.py  test_reference_data_routes.py  test_scenario_routes.py
mock-exchange/tests/unit/: test_execution_engine.py  test_gbm_simulator.py  test_market_data_service.py  test_models.py  test_order_state.py  test_reference_data.py  test_scenario_engine.py
ops-ui/: Dockerfile  Dockerfile.dev  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
schemas/: envelope-v1.avsc
schemas/attribution/: calculated-v1.avsc
schemas/capital/: transaction-v1.avsc
schemas/cash/: balance-warning-v1.avsc  projected-v1.avsc  settlement-v1.avsc
schemas/compliance/: violation-v1.avsc
schemas/corporate-actions/: announced-v1.avsc
schemas/eod/: lifecycle-v1.avsc
scripts/: backup.sh  dump_migration_sql.py  init-db.sql  init-replica.sh  pg-hba-replication.sh  restore.sh  seed.py
tests/: conftest.py  factories.py  helpers.py
tests-e2e/: README.md  auth.setup.ts  client-ui.smoke.spec.ts  desk-ui.smoke.spec.ts  ops-ui.smoke.spec.ts  package.json  tsconfig.json
ui/: Dockerfile  Dockerfile.dev  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
(+1847 files in other folders)
