[project]
name = "mini-hedge"
version = "0.1.0"
description = "Mini hedge fund PM desk — modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.9.0",
    "openfga-sdk>=0.9.0",
    "psycopg2-binary>=2.9.0",
    "cachetools>=5.5.0",
    "aiokafka>=0.11.0",
    "cramjam>=2.8.0",
    "fastavro>=1.9.0",
    "redis[hiredis]>=5.0.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[postgres]>=4.8.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "tach>=0.16.0",
    "schemathesis>=3.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = [
    "B008",   # function-call-in-default-argument — FastAPI uses Query() in defaults by design
    "A002",   # builtin-argument-shadowing — `id` is conventional for entity identifiers
    "TC003",  # typing-only-standard-library-import — interface files need runtime types for Pydantic
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring database (deselect with '-m \"not integration\"')",
    "contract: marks contract tests validated against OpenAPI spec (run with '-m contract')",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
